fire-fox scrollbar bugs fixed

--- a/src/app/components/similar-games/similar-games.component.scss
+++ b/src/app/components/similar-games/similar-games.component.scss
@@ -56,6 +56,7 @@
   padding-right: 110px;
   padding-top: 24px;
   padding-bottom: 20px;
+  scrollbar-color: transparent transparent; 
 
   @media (max-width: 1024px) {
     padding-left: 39px;
