--- a/src/app/components/stream-card/stream-card.component.scss
+++ b/src/app/components/stream-card/stream-card.component.scss
@@ -29,6 +29,7 @@
     display: block;
     padding-left: 80px;
     padding-right: 100px;
+    scrollbar-color: transparent transparent; 
 
     @media (max-width: 1024px) {
         padding-left: 39px;
