--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -167,6 +167,7 @@
   display: block;
   padding-left: 78px;
   padding-right: 80px;
+  scrollbar-color: transparent transparent; 
 
   @media (max-width: 1024px) {
     padding-left: 39px;
